--- a/birds.html
+++ b/birds.html
@@ -5,6 +5,17 @@
     <title>Birds through the year, Chicago</title>
   </head>
   <body>
-    <p> </p>
+    <p>January</p>
+    <p>February</p>
+    <p>March</p>
+    <p>April</p>
+    <p>May</p>
+    <p>June</p>
+    <p>July</p>
+    <p>August</p>
+    <p>September</p>
+    <p>October</p>
+    <p>November</p>
+    <p>December</p>
   </body>
 </html>
