--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <a href="index.html"> Resume </a>
+  <a href="birds.html"> Birds </a>
+  <a href="music.html"> Music </a>
   <head>
     <meta charset="utf-8">
     <title> Resume </title>
