Change to links

--- a/birds.html
+++ b/birds.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <a href="index.html"> Resume </a>
-   <a href="birds.html"> Birds </a>
-  <a href="music.html"> Music </a>
+  <a href="https://jfabrycky.github.io/resume/"> Resume </a>
+   <a href="https://jfabrycky.github.io/resume/birds.html"> Birds </a>
+  <a href="https://jfabrycky.github.io/resume/music.html"> Music </a>
   <head>
     <meta charset="utf-8">
     <title>Birds through the year, Chicago</title>
