Bullet-ordering the links

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <a href="index.html"> Resume </a>
-  <a href="birds.html"> Birds </a>
-  <a href="music.html"> Music </a>
+  <ul>
+    <li> <a href="index.html"> Resume </a> </li>
+    <li> <a href="birds.html"> Birds </a> </li>
+    <li> <a href="music.html"> Music </a> </li>
+  </ul>
   <head>
     <meta charset="utf-8">
     <title> Resume </title>
