More youtube videos for favorite songs

--- a/music.html
+++ b/music.html
@@ -16,7 +16,9 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/4Tr0otuiQuU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <li>Arabesque</li>
         <li>Turkish March</li>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/aeEmGvm7kDk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <li>Vivaldi's Four Seasons</li>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/GRxofEmo3HA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </ul>
     <h3>My favorite composers</h3>
       <ul>
