Add name to resume

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title> Resume </title>
   </head>
   <body>
+    <h1>Profesional Resume: John Fabrycky</h1>
     <h2>WORK EXPERIENCE</h2>
     <h4>Piano Teacher</h4>
     <p>Chicago, IL | 2016 – Present</p>
