Closing body and html

--- a/index.html
+++ b/index.html
@@ -42,3 +42,5 @@
     <h2>AWARDS</h2>
     <p>Illinois Junior Academy of Science State (2020)<p>
     <p>Chicago City Science Fair (2019)</p>
+  </body>
+</html>
