frameborder obselete, removed

--- a/birds.html
+++ b/birds.html
@@ -11,23 +11,23 @@
       <li> <a href="music.html"> Music </a> </li>
     </ul>
     <p>January</p>
-    <iframe src="https://macaulaylibrary.org/asset/410323961/embed" height="316" width="640" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://macaulaylibrary.org/asset/410323961/embed" height="316" width="640" allowfullscreen></iframe>
     <p>February</p>
-    <iframe src="https://macaulaylibrary.org/asset/413794871/embed" height="502" width="640" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://macaulaylibrary.org/asset/413794871/embed" height="502" width="640" allowfullscreen></iframe>
     <p>March</p>
-    <iframe src="https://macaulaylibrary.org/asset/427151321/embed" height="548" width="640" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://macaulaylibrary.org/asset/427151321/embed" height="548" width="640" allowfullscreen></iframe>
     <p>April</p>
-    <iframe src="https://macaulaylibrary.org/asset/435668761/embed" height="533" width="640" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://macaulaylibrary.org/asset/435668761/embed" height="533" width="640"  allowfullscreen></iframe>
     <p>May</p>
-    <iframe src="https://macaulaylibrary.org/asset/443244801/embed" height="517" width="640" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://macaulaylibrary.org/asset/443244801/embed" height="517" width="640"  allowfullscreen></iframe>
     <p>June</p>
-    <iframe src="https://macaulaylibrary.org/asset/460227221/embed" height="479" width="640" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://macaulaylibrary.org/asset/460227221/embed" height="479" width="640"  allowfullscreen></iframe>
     <p>July</p>
-    <iframe src="https://macaulaylibrary.org/asset/469875021/embed" height="515" width="640" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://macaulaylibrary.org/asset/469875021/embed" height="515" width="640"  allowfullscreen></iframe>
     <p>August</p>
     <p>I don't have any pictures for this month :( </p>
     <p>September</p>
-    <iframe src="https://macaulaylibrary.org/asset/481590101/embed" height="548" width="640" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://macaulaylibrary.org/asset/481590101/embed" height="548" width="640"  allowfullscreen></iframe>
     <p>October</p>
     <p>I don't have any pictures for this month :( </p>
     <p>November</p>
