--- a/music.html
+++ b/music.html
@@ -11,15 +11,13 @@
       <li> <a href="music.html"> Music </a> </li>
     </ul>
     <h3>My favorite pieces</h3>
-      <ul>
-        <li>Moonlight Sonata</li>
+        <p>Moonlight Sonata</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/4Tr0otuiQuU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <li>Arabesque</li>
-        <li>Turkish March</li>
+        <p>Arabesque</p>
+        <p>Turkish March</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/aeEmGvm7kDk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <li>Vivaldi's Four Seasons</li>
+        <p>Vivaldi's Four Seasons</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/GRxofEmo3HA" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </ul>
     <h3>My favorite composers</h3>
       <ul>
         <li>Mozart</li>
