--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title> Resume </title>
   </head>
-  <body>  
+  <body>
     <ul>
       <li> <a href="index.html"> Resume </a> </li>
       <li> <a href="birds.html"> Birds </a> </li>
@@ -21,24 +21,19 @@
     <p>Boy Scouts, Troop 599 | Chicago, IL | 2016 – Present</p>
     <p>Prepared meeting activities, in-person and online</p>
     <p>Organized group of youth and adults to install disc golf baskets in Jackson Park</p>
-    <p>Eagle Award in progress, expected Summer 2022</p>
-
+    <p>Eagle Award, awarded 9/11/2022</p>
     <h2>SKILLS</h2>
-
     <p>Dedicated to excellence</p>
     <p>Python, Java</p>
     <p>Experienced interacting with people of all ages </p>
     <p>Eager to learn new things</p>
     <p>Passionate birder: 847 ebird.org checklists to date</p>
     <p>Follow advancements in ornithology</p>
-
-
     <h2>EDUCATION</h2>
     <p>School: Jones College Preparatory School (Class of 2023, GPA 3.97/4.00)</p>
     <p>AP Exams Completed: Chemistry (5), US History (5), Human Geography (4)</p>
     <p>AP Exams in Progress: Calculus BC, Spanish Language, Computer Science A, United States Government</p>
     <p>Independent Learning: Art of Problem Solving (Calculus BC (A+), Counting and Probability, Number Theory)</p>
-
     <h2>AWARDS</h2>
     <p>Illinois Junior Academy of Science State (2020)<p>
     <p>Chicago City Science Fair (2019)</p>
