--- a/birds.html
+++ b/birds.html
@@ -11,7 +11,7 @@
       <li> <a href="music.html"> Music </a> </li>
     </ul>
     <p>January</p>
-    <iframe src="https://macaulaylibrary.org/asset/410323961/embed" height="316" width="640" allowfullscreen></iframe>
+    <iframe src="resume_images/snowy_owl.jpeg" height="316" width="640" allowfullscreen></iframe>
     <p>February</p>
     <iframe src="https://macaulaylibrary.org/asset/413794871/embed" height="502" width="640" allowfullscreen></iframe>
     <p>March</p>
