--- a/birds.html
+++ b/birds.html
@@ -11,23 +11,23 @@
       <li> <a href="music.html"> Music </a> </li>
     </ul>
     <p>January</p>
-    <iframe src="resume_images/snowy_owl_sm.jpeg" height="316" width="640" allowfullscreen></iframe>
+    <iframe src="resume_images/snowy_owl.jpeg" height="316" width="640" allowfullscreen></iframe>
     <p>February</p>
-    <iframe src="resume_images/lapland_longspur_sm.jpeg" height="502" width="640" allowfullscreen></iframe>
+    <iframe src="resume_images/lapland_longspur_sm.jpg" height="502" width="640" allowfullscreen></iframe>
     <p>March</p>
-    <iframe src="resume_images/red_shouldered_hawk_sm.jpeg" height="548" width="640" allowfullscreen></iframe>
+    <iframe src="resume_images/red_shouldered_hawk_sm.jpg" height="548" width="640" allowfullscreen></iframe>
     <p>April</p>
-    <iframe src="resume_images/ruby_crowned_kinglet_sm.jpeg" height="533" width="640"  allowfullscreen></iframe>
+    <iframe src="resume_images/ruby_crowned_kinglet_sm.jpg" height="533" width="640"  allowfullscreen></iframe>
     <p>May</p>
-    <iframe src="resume_images/brown_thrasher_sm.jpeg" height="517" width="640"  allowfullscreen></iframe>
+    <iframe src="resume_images/brown_thrasher_sm.jpg" height="517" width="640"  allowfullscreen></iframe>
     <p>June</p>
-    <iframe src="resume_images/mallard_sm.jpeg" height="479" width="640"  allowfullscreen></iframe>
+    <iframe src="resume_images/mallard_sm.jpg" height="479" width="640"  allowfullscreen></iframe>
     <p>July</p>
-    <iframe src="resume_images/sanderling_sm.jpeg" height="515" width="640"  allowfullscreen></iframe>
+    <iframe src="resume_images/sanderling_sm.jpg" height="515" width="640"  allowfullscreen></iframe>
     <p>August</p>
     <p>I don't have any pictures for this month :( </p>
     <p>September</p>
-    <iframe src="resume_images/red_knot_sm.jpeg" height="548" width="640"  allowfullscreen></iframe>
+    <iframe src="resume_images/red_knot_sm.jpg" height="548" width="640"  allowfullscreen></iframe>
     <p>October</p>
     <p>I don't have any pictures for this month :( </p>
     <p>November</p>
