removing size restrictions

--- a/birds.html
+++ b/birds.html
@@ -11,7 +11,7 @@
       <li> <a href="music.html"> Music </a> </li>
     </ul>
     <p>January</p>
-    <iframe src="resume_images/snowy_owl.jpeg" height="316" width="640"></iframe>
+    <iframe src="resume_images/snowy_owl.jpeg"></iframe>
     <p>February</p>
     <iframe src="resume_images/lapland_longspur_sm.jpg" height="502" width="640" allowfullscreen></iframe>
     <p>March</p>
