--- a/birds.html
+++ b/birds.html
@@ -11,7 +11,7 @@
       <li> <a href="music.html"> Music </a> </li>
     </ul>
     <p>January</p>
-    <iframe src="resume_images/snowy_owl.jpeg" height="1000" width="1200" allowfullscreen></iframe>
+    <iframe src="resume_images/snowy_owl.png" height="1000" width="1200" allowfullscreen></iframe>
     <p>February</p>
     <iframe src="resume_images/lapland_longspur_sm.jpg" height="1000" width="1200" allowfullscreen></iframe>
     <p>March</p>
@@ -19,7 +19,7 @@
     <p>April</p>
     <iframe src="resume_images/ruby_crowned_kinglet_sm.jpg" height="1000" width="1200"  allowfullscreen></iframe>
     <p>May</p>
-    <iframe src="resume_images/brown_thrasher_sm.jpg" height="1000" width="1200"  allowfullscreen></iframe>
+    <iframe src="resume_images/brown_thrasher.png" height="1000" width="1200"  allowfullscreen></iframe>
     <p>June</p>
     <iframe src="resume_images/mallard_sm.jpg" height="1000" width="1200"  allowfullscreen></iframe>
     <p>July</p>
