--- a/birds.html
+++ b/birds.html
@@ -15,7 +15,7 @@
     <p>February</p>
     <iframe src="resume_images/lapland_longspur_sm.jpg" height="1000" width="1200" allowfullscreen></iframe>
     <p>March</p>
-    <iframe src="resume_images/red_shouldered_hawk_sm.jpg" height="1000" width="1200" allowfullscreen></iframe>
+    <iframe src="resume_images/red_shouldered_hawk.png" height="1000" width="1200" allowfullscreen></iframe>
     <p>April</p>
     <iframe src="resume_images/ruby_crowned_kinglet_sm.jpg" height="1000" width="1200"  allowfullscreen></iframe>
     <p>May</p>
