Changing all pictures to smaller images

--- a/birds.html
+++ b/birds.html
@@ -13,21 +13,21 @@
     <p>January</p>
     <iframe src="resume_images/snowy_owl.png" height="1000" width="1200" allowfullscreen></iframe>
     <p>February</p>
-    <iframe src="resume_images/lapland_longspur_sm.jpg" height="1000" width="1200" allowfullscreen></iframe>
+    <iframe src="resume_images/lapland_longspur.png" height="1000" width="1200" allowfullscreen></iframe>
     <p>March</p>
     <iframe src="resume_images/red_shouldered_hawk.png" height="1000" width="1200" allowfullscreen></iframe>
     <p>April</p>
-    <iframe src="resume_images/ruby_crowned_kinglet_sm.jpg" height="1000" width="1200"  allowfullscreen></iframe>
+    <iframe src="resume_images/ruby_crowned_kinglet.png" height="1000" width="1200"  allowfullscreen></iframe>
     <p>May</p>
     <iframe src="resume_images/brown_thrasher.png" height="1000" width="1200"  allowfullscreen></iframe>
     <p>June</p>
-    <iframe src="resume_images/mallard_sm.jpg" height="1000" width="1200"  allowfullscreen></iframe>
+    <iframe src="resume_images/mallard.png" height="1000" width="1200"  allowfullscreen></iframe>
     <p>July</p>
-    <iframe src="resume_images/sanderling_sm.jpg" height="1000" width="1200"  allowfullscreen></iframe>
+    <iframe src="resume_images/sanderling.png" height="1000" width="1200"  allowfullscreen></iframe>
     <p>August</p>
     <p>I don't have any pictures for this month :( </p>
     <p>September</p>
-    <iframe src="resume_images/red_knot_sm.jpg" height="1000" width="1200"  allowfullscreen></iframe>
+    <iframe src="resume_images/red_knot.png" height="1000" width="1200"  allowfullscreen></iframe>
     <p>October</p>
     <p>I don't have any pictures for this month :( </p>
     <p>November</p>
