testing removing height/width setters

--- a/birds.html
+++ b/birds.html
@@ -11,7 +11,7 @@
       <li> <a href="music.html"> Music </a> </li>
     </ul>
     <p>January</p>
-    <iframe src="resume_images/snowy_owl.png" height="1000" width="1200" allowfullscreen></iframe>
+    <iframe src="resume_images/snowy_owl.png" allowfullscreen></iframe>
     <p>This is a rare winter owl that regularly visits the midwest, and especially the lakefront, every winter. They breed on the arctic tundra,
       and only juveniles come south during the winter. Adults usually stay in the far north during the winter. Adult males are pure white, but juveniles
       are spotted, like the one shown in my photograph. I took this picture at the 31st Street Beach harbor. I suppose the owls like this site because
@@ -19,11 +19,11 @@
       is prime habitat for rodents, their chief source of food. </p>
       </thead>
     <p>February</p>
-    <iframe src="resume_images/lapland_longspur.png" height="1000" width="1200" allowfullscreen></iframe>
+    <iframe src="resume_images/lapland_longspur.png" allowfullscreen></iframe>
     <p>The lapland longspur is a northern finch which usually migrates through during spring and fall. These two were out of season, at 31st Street Beach,
       and were attracting a considerable birding crowd.</p>
     <p>March</p>
-    <iframe src="resume_images/red_shouldered_hawk.png" height="1000" width="1200" allowfullscreen></iframe>
+    <iframe src="resume_images/red_shouldered_hawk.png" allowfullscreen></iframe>
     <p>The red shouldered hawk is a rare breeder in the chicago area, but a common spring and fall migrant. I found this one at Washington Park.</p>
     <p>April</p>
     <iframe src="resume_images/ruby_crowned_kinglet.png" height="1000" width="1200"  allowfullscreen></iframe>
