--- a/birds.html
+++ b/birds.html
@@ -11,7 +11,7 @@
       <li> <a href="music.html"> Music </a> </li>
     </ul>
     <p>January</p>
-    <iframe src="resume_images/snowy_owl.png" allowfullscreen></iframe>
+    <iframe src="resume_images/snowy_owl.png"></iframe>
     <p>This is a rare winter owl that regularly visits the midwest, and especially the lakefront, every winter. They breed on the arctic tundra,
       and only juveniles come south during the winter. Adults usually stay in the far north during the winter. Adult males are pure white, but juveniles
       are spotted, like the one shown in my photograph. I took this picture at the 31st Street Beach harbor. I suppose the owls like this site because
