--- a/birds.html
+++ b/birds.html
@@ -12,7 +12,7 @@
     </ul>
     <p>January</p>
     <iframe src="resume_images/snowy_owl.png" height="900" width="1000" allowfullscreen></iframe>
-    <p>This is a rare winter owl that regularly visits the midwest, and especially the lakefront, every winter. They breed on the arctic tundra,
+    <p>The snowy owl a rare winter owl that regularly visits the midwest, and especially the lakefront, every winter. They breed on the arctic tundra,
       and only juveniles come south during the winter. Adults usually stay in the far north during the winter. Adult males are pure white, but juveniles
       are spotted, like the one shown in my photograph. I took this picture at the 31st Street Beach harbor. I suppose the owls like this site because
       docks are locked during the winter, giving them plenty of distance from people, and during the night they can hunt in burnham park, which certainly
