--- a/music.html
+++ b/music.html
@@ -14,7 +14,7 @@
     <p>Moonlight Sonata</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/4Tr0otuiQuU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>Arabesque 2, Debussy</p>
-    <iframe width="695" height="391" src="https://www.youtube.com/embed/KAFZ-yLjca4" title="Debussy Arabesque No.2 - P. Barton FEURICH 218 harmonic pedal piano" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="695" height="391" src="https://www.youtube.com/embed/KAFZ-yLjca4" title="Debussy Arabesque No.2 - P. Barton FEURICH 218 harmonic pedal piano" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>Turkish March</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/aeEmGvm7kDk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>Vivaldi's Four Seasons</p>
